manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo1
  name: demo1
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo1
  type: ClusterIP
status:
  loadBalancer: {}
